# mptsd

./: ChangeLog  README  README.MD  install-strip.sh  meson.build  readme.md
libfuncs/: meson.build
libtsfuncs/: meson.build
